Add blockquote style

--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -208,3 +208,12 @@ table {
     border-color: $active;
   }
 }
+
+blockquote {
+  background: $controls;
+  border-left: 3px solid $passive;
+}
+
+blockquote:before {
+  color: $passive;
+}
