--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -47,7 +47,7 @@
             - else
               = fa_icon 'star-o'
             = post.starred_users.count
-        = link_to 'Read more', post_path(post)
+        = link_to 'Read more', post_path(post) unless action_name == 'show'
       .post-likes
         = button_to like_post_path(post), class: 'like' do
           = fa_icon 'thumbs-o-up'
